# gpu-probe

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml  release.yml
examples/: detect.rs
src/: drm.rs  lib.rs  metal.rs  nvidia.rs
tests/: fd_leak.rs  public_api.rs
